--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           
 <ul>
             
-<li class = "ft"> Friday, May 27:<br>ELA Exam!</li>
-<li class = "ft"> Tuesday, May 31st:<br>Math Exam!</li>
-<li class = "ft"> Wednsday, June 1st:<br>Social Studies Exam!</li>
-<li class = "ft"> Thursday, June 2nd:<br>Science Exam!</li>
-<li class="ft">Friday June 3rd:<br>Celebration Of Learning @ The Buffalo Club!</li>
+<li class = "ft"> Friday, May 27:<br>ELA Exam!<br></li>
+<li class = "ft"> Tuesday, May 31st:<br>Math Exam!<br></li>
+<li class = "ft"> Wednsday, June 1st:<br>Social Studies Exam!<br></li>
+<li class = "ft"> Thursday, June 2nd:<br>Science Exam!<br></li>
+<li class="ft">Friday June 3rd:<br>Celebration Of Learning @ The Buffalo Club!<br></li>
           </ul>
         </div>
         <div class="sidebar-left all">
