--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="sidebar-left all">
           <ul>
-            <li>Master Exam Schedule: <a href = "oreigdor.github.io/exam-schedule.docx">Click Here.</a></li>
+            <li>Master Exam Schedule: <a class = "lnk" href = "oreigdor.github.io/exam-schedule.docx">Click Here.</a></li>
           
 </ul>
         
