--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </ul>
         
 </div>
-<div class = clock all"><script src="http://www.clocklink.com/embed.js"></script> <script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="5015-blue.swf";obj.TimeZone="EST"; obj.width=150;obj.height=38;obj.wmode="transparent";showClock(obj);</script></div>
+<div class = clock"><script src="http://www.clocklink.com/embed.js"></script> <script type="text/javascript" language="JavaScript">obj=new Object;obj.clockfile="5015-blue.swf";obj.TimeZone="EST"; obj.width=150;obj.height=38;obj.wmode="transparent";showClock(obj);</script></div>
 </div>
     
 </body>
