--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           
 <ul>
             
-  <li class = "ft"><a href = "oreigdor.github.io/mr_k">Mr. K Does Not Approve memes</a></li>
+  <li class = "ft"><a href = "oreigdor.github.io/mr_k.html">Mr. K Does Not Approve memes</a></li>
 
           </ul>
         </div>
