--- a/mr_k.html
+++ b/mr_k.html
@@ -2,8 +2,8 @@
  <html>
    <head>
     <meta charset = utf-8>
-    <title = Mr. K Does Not Approve>
-   </head>
+    <title>Mr. K Does Not Approve</title>
+    </head>
    <body>
-    
+    <img src = "oreigdor.github.io/Mr._K.jpg">
    </body>
