--- a/mr_k.html
+++ b/mr_k.html
@@ -5,5 +5,5 @@
     <title>Mr. K Does Not Approve</title>
     </head>
    <body>
-    <img src = "http://oreigdor.github.io/Mr._K.jpg">
+    <img src = "Mr._K.jpg">
    </body>
