--- a/mr_k.html
+++ b/mr_k.html
@@ -2,8 +2,11 @@
  <html>
    <head>
     <meta charset = utf-8>
+    <link rel="stylesheet" type="text/css" href="oreigdor.github.io/style.css">
     <title>Mr. K Does Not Approve</title>
     </head>
-   <body>
-    <img src = "Mr._K.jpg">
+   <body class = "all">
+    <div class = "all">
+     <img src = "Mr._K.jpg">
+    </div>
    </body>
