--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ul>
             
   <li class = "ft"><a href = "oreigdor.github.io/mr_k.html">Mr. K Does Not Approve memes</a></li>
-
+  <li class = "ft"><a href = "oreigdor.github.io/slither.html">Slither.io replica!</a></li>
           </ul>
         </div>
         <div class="sidebar-left all">
