--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <meta title = "Oreigdor.github.io">
    </head>
    <body>
-    <a href = "http://oreigdor.github.io/sans/Bad Time Simulator(Sans Fight).html">Sans Fight</a>
+    <a href = http://oreigdor.github.io/sans/Bad%20Time%20Simulator%20(Sans%20Fight).mhtml>Sans Fight</a>
    </body>
   </html>
