--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Oreigdor's Emulators!</title>
+<title>Super Mario World!</title>
 </head>
 <body>
 <div>
@@ -36,8 +36,8 @@
 			{
 				var flashvars = 
 				{
-					system : 'sega',
-					url : '/roms/Flappy Bird (PD) v1.0.gen'
+					system : 'gameboy',
+					url : '/roms/0242 - Super Mario World - Super Mario Advance 2 (J)(Eurasia).gba'
 				};
 				var params = {};
 				var attributes = {};
