--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			{
 				var flashvars = 
 				{
-					system : 'gameboy',
+					system : 'gba',
 					url : '/roms/0242 - Super Mario World - Super Mario Advance 2 (J)(Eurasia).gba'
 				};
 				var params = {};
