--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 <h1>Emulated Games</h1>
-<a href = "/marioworld.html">Super Mario World</a>
-<a href = "/pokemonemerald.html">Pokemon Emerald</a>
+<a href = "/marioworld.html">Super Mario World</a><br>
+<a href = "/pokemonemerald.html">Pokemon Emerald</a><br>
+<a href = "/marioworld2yoshisisland.html">Super Mario World 2: Yoshi's Island</a><br>
+<a href = "/marioluigisuperstarsaga.html">Mario and Luigi: Superstar Saga</a>
 <h1>Cloned Games</h1>
 <a href = "/fsmario.html">Full Screen Mario</a>
