--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <a href = "/marioworld.html">Super Mario World</a><br>
 <a href = "/pokemonemerald.html">Pokemon Emerald</a><br>
 <a href = "/marioworld2yoshisisland.html">Super Mario World 2: Yoshi's Island</a><br>
-<a href = "/marioluigisuperstarsaga.html">Mario and Luigi: Superstar Saga</a>
+<a href = "/marioluigisuperstarsaga.html">Mario and Luigi: Superstar Saga</a><br>
+<a href = "/ebhalloween.html">Earthbound Halloween Hack</a><br>
 <h1>Cloned Games</h1>
 <a href = "/fsmario.html">Full Screen Mario</a>
