--- a/marioworld2yoshisisland.html
+++ b/marioworld2yoshisisland.html
@@ -35,7 +35,7 @@
 				var flashvars = 
 				{
 					system : 'gba',
-					url : '/roms/Super Mario World 2 - Yoshis Island (Europe) (En,Fr,De) (Rev A).sfc'
+					url : '/roms/SMW2.sfc'
 				};
 				var params = {};
 				var attributes = {};
