--- a/marioworld2yoshisisland.html
+++ b/marioworld2yoshisisland.html
@@ -34,8 +34,8 @@
 			{
 				var flashvars = 
 				{
-					system : 'gba',
-					url : '/roms/SMW2.sfc'
+					system : 'snes',
+					url : 'oreigdor.github.io/roms/SMW2.sfc'
 				};
 				var params = {};
 				var attributes = {};
