--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <a href = "/marioworld2yoshisisland.html">Super Mario World 2: Yoshi's Island</a><br>
 <a href = "/marioluigisuperstarsaga.html">Mario and Luigi: Superstar Saga</a><br>
 <a href = "/ebhalloween.html">Earthbound Halloween Hack</a><br>
+<h1>You MUST NOT play any emulated games that you do not own!</h1>
 <h1>Cloned Games</h1>
 <a href = "/fsmario.html">Full Screen Mario</a>
