--- a/index.html
+++ b/index.html
@@ -13,3 +13,5 @@
 <h1>You MUST NOT play any emulated games that you do not own!</h1>
 <h1>Cloned Games</h1>
 <a href = "/fsmario.html">Full Screen Mario</a>
+<h1>Allergy/Sickness Map</h1>
+<iframe src="http://www.sickweather.com/widgets/external-embed/?key=ts2014&style=color&location=14092" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
