--- a/marioworld.html
+++ b/marioworld.html
@@ -36,8 +36,8 @@
 			{
 				var flashvars = 
 				{
-					system : 'gba',
-					url : '/roms/0242 - Super Mario World - Super Mario Advance 2 (J)(Eurasia).gba'
+					system : 'snes',
+					url : 'http://fchsstudyhall.weebly.com/uploads/2/5/8/4/25845927/super_mario_world.smc'
 				};
 				var params = {};
 				var attributes = {};
