--- a/marioworld.html
+++ b/marioworld.html
@@ -37,7 +37,7 @@
 				var flashvars = 
 				{
 					system : 'snes',
-					url : 'http://fchsstudyhall.weebly.com/uploads/2/5/8/4/25845927/super_mario_world.smc'
+					url : '/roms/super_mario_world.smc'
 				};
 				var params = {};
 				var attributes = {};
