--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <a href = "/ebhalloween.html">Earthbound Halloween Hack</a><br>
 <a href = "/mariobros.html">Super Mario Brothers</a><br>
 <h1>You MUST NOT play any emulated games that you do not own!</h1>
-<h1>Cloned Games</h1>
+<h1>HTML5/Flash Games</h1>
+<a href = "/DoodleJump.html">Doodle Jump</a>
 <a href = "/fsmario.html">Full Screen Mario</a>
 <h1>Allergy/Sickness Map</h1>
 <iframe src="http://www.sickweather.com/widgets/external-embed/?key=ts2014&style=color&location=default" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
