--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@
 <a href = "/DoodleJump.html">Doodle Jump</a>
 <a href = "/fsmario.html">Full Screen Mario</a>
 <h1>Allergy/Sickness Map</h1>
-<iframe src="http://www.sickweather.com/widgets/external-embed/?key=ts2014&style=color&location=default" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
+<iframe src="http://www.sickweather.com/widgets/external-embed/?key=ts2014&style=color&location=14092" style=" border-width:0 " width="300" height="250" frameborder="0" scrolling="no"></iframe>
