--- a/Warfare1917.html
+++ b/Warfare1917.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+ <html>
+   <head>
+    <title>Warfare 1917</title>
+   </head>
+   <body>
+    <object width="500" height="500">
+    <param name="movie" value="/flash/warfare1917.swf">
+    <embed src="/flash/warfare1917.swf" width="100" height="100">
+    </embed>
+</object>
