--- a/cursors.html
+++ b/cursors.html
@@ -55,7 +55,7 @@ ga('send', 'pageview');
 <span style="font-family: NovaSquare, monospace;">a</span>
 </div>
 <script type="text/javascript" src="https://c.n.m28.io/sdk.js"></script>
-<script type="text/javascript" src="client_out.js?10"></script>
+<script type="text/javascript" src="http://cursors.io/client_out.js?10"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
