--- a/civ_bronze.html
+++ b/civ_bronze.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
    <head>
-    <title>Warfare 1917</title>
+    <title>Pre-Civilization Bronze Age</title>
    </head>
    <body>
     <object width="1000" height="500">
