--- a/civ_stone.html
+++ b/civ_stone.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+ <html>
+   <head>
+    <title>Pre-Civilization Stone Age</title>
+   </head>
+   <body>
+    <object width="1000" height="500">
+    <param name="movie" value="/flash/pre-civilization-stone-age.swf">
+    <embed src="/flash/pre-civilization-stone-age.swf" width="100" height="100">
+    </embed>
+</object>
+  </body>
+</html>
