--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     <a href = "/civ-stone.html">Civilization: Stone Age</a><br>
     <a href = "/replaying_the_game.html">Replaying The Game</a><br>
     <a href = "/reimagining_the_game.html">Reimagining The Game</a><br>
-  </body>
+      <iframe src = "/chatroom.php"></iframe>
+      </body>
 </html>
