--- a/marioallstars.html
+++ b/marioallstars.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Super Mario All Stars + Super Mario World (SFC)</title>
+<title>Super Mario World 2: Yoshi's Island</title>
 </head>
 <body>
 <div>
@@ -35,7 +35,7 @@
 				var flashvars = 
 				{
 					system : 'snes',
-					url : '/roms/Super Mario All-Stars + Super Mario World (USA).sfc'
+					url : 'oreigdor.github.io/roms/Super Mario All-Stars + Super Mario World (USA).sfc'
 				};
 				var params = {};
 				var attributes = {};
