--- a/marioallstars.html
+++ b/marioallstars.html
@@ -35,7 +35,7 @@
 				var flashvars = 
 				{
 					system : 'snes',
-					url : 'oreigdor.github.io/roms/Super Mario All-Stars + Super Mario World (USA).sfc'
+					url : 'oreigdor.github.io/roms/Super Mario All-Stars + Super Mario World (USA).smc'
 				};
 				var params = {};
 				var attributes = {};
