--- a/ssbf2.html
+++ b/ssbf2.html
@@ -5,8 +5,8 @@
    </head>
    <body>
     <object width="1000" height="500">
-    <param name="movie" value="/flash/pre-civilization-bronze-age.swf">
-    <embed src="/flash/ssbf2.swf" width="100" height="100">
+    <param name="movie" value="/ssbf2.swf">
+    <embed src="/ssbf2.swf" width="100" height="100">
     </embed>
 </object>
   </body>
