--- a/21.html
+++ b/21.html
@@ -5,6 +5,7 @@
   </head>
   <body>
    <iframe height="400px" width="100%" src="https://repl.it/@SethBuccella/C-21?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-   <a href="oreigdor.github.io/21.exe">Download for save/load support!</a>
+   <a href="oreigdor.github.io/21.exe">Download as a .exe file!</a>
+   <p>When loading a save, enter the name followed by ".21save" as the path</p>
   </body>
  </html>
