--- a/boi.html
+++ b/boi.html
@@ -5,7 +5,7 @@
    </head>
    <body>
     <object width="500" height="500">
-    <param name="movie" value="/flash/Doodle Jump.swf">
+    <param name="movie" value="boi.swf">
     <embed src="boi.swf" width="800" height="600">
     </embed>
 </object>
