--- a/Isaac/index.html
+++ b/Isaac/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 	<head>
-		<title>SWFObject 2 static publishing example page</title>
+		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 		<script type="text/javascript" src="swfobject.js"></script>
 		<script type="text/javascript">
-		swfobject.registerObject("myId", "9.0.0", "expressInstall.swf");
+			swfobject.registerObject("boi", "9.0.0");
 		</script>
 	</head>
 	<body>
-		<div>	
-			<object id="myId" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="300" height="140">
-				<param name="movie" value="test.swf" />
-        		<!--[if !IE]>-->
-				<object type="application/x-shockwave-flash" data="test.swf" width="300" height="140">
+		<div>
+			<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="800" height="600" id="boi">
+				<param name="movie" value="Binding_of_Isaac[0].swf" />
+				<param name="allowfullscreen" value="true" />
+				<param name="allowscriptaccess" value="always" />
+				<param name="allownetworking" value="all" />
+				<!--[if !IE]>-->
+				<object type="application/x-shockwave-flash" data="Binding_of_Isaac[0].swf" width="800" height="600">
+					<param name="allowfullscreen" value="true" />
+					<param name="allowscriptaccess" value="always" />
+					<param name="allownetworking" value="all" />
 				<!--<![endif]-->
-				<div>
-					<h1>Alternative content</h1>
-					<p><a href="http://www.adobe.com/go/getflashplayer"><img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" /></a></p>
-				</div>
+					<a href="http://www.adobe.com/go/getflashplayer">
+						<img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
+					</a>
 				<!--[if !IE]>-->
 				</object>
 				<!--<![endif]-->
